# jaringan

./: .gitignore  Cargo.toml  README.md
.vscode-jaringan/: CHANGELOG.md  README.md  language-configuration.json  package.json
.vscode-jaringan/syntaxes/: jaringan.tmLanguage.json
crates/jaringan-browser/: Cargo.toml
crates/jaringan-browser/src/: config.rs  lib.rs  main.rs  session.rs
crates/jaringan-core/: Cargo.toml
crates/jaringan-core/src/: lib.rs
crates/jaringan-core/tests/: example-script-pages.rs
crates/jaringan-demo-microblog/: Cargo.toml
crates/jaringan-demo-microblog/src/: main.rs
crates/jaringan-formatter/: Cargo.toml
crates/jaringan-formatter/src/: lib.rs  main.rs
crates/jaringan-gateway/: Cargo.toml
crates/jaringan-gateway/src/: http_to_jrg.rs  jrg_to_http.rs  lib.rs  main.rs
crates/jaringan-plugins/: Cargo.toml
crates/jaringan-plugins/src/: hot_reload.rs  lib.rs  plugin.rs
crates/jaringan-protocol/: Cargo.toml
crates/jaringan-protocol/src/: lib.rs
crates/jaringan-render/: Cargo.toml
crates/jaringan-render/src/: lib.rs
crates/jaringan-script/: Cargo.toml
crates/jaringan-script-sdk/: Cargo.toml
crates/jaringan-script-sdk/src/: lib.rs
crates/jaringan-script/src/: bridge.rs  lib.rs
docs/: architecture.md  index.jrg  m1-file-browser.md  plugin-abi.jrg
docs/examples/: about.jrg  action-form.jrg  hello.jrg  index.jrg  protocol.jrg  rich-layout.jrg  search-form.jrg
docs/getting-started/: first-page.jrg  index.jrg  installation.jrg
docs/guide/: actions.jrg  index.jrg  markup.jrg  search.jrg  signatures.jrg  streaming.jrg
docs/plans/: 2026-06-07-initial-prototype.md
docs/reference/: cli.jrg  index.jrg  protocol.jrg
docs/spec/: jrg-encryption.jrg  jrg-encryption.md  jrg-page-format.jrg  jrg-page-format.md  jrg-protocol.jrg  jrg-protocol.md  jrg-search.jrg  jrg-search.md  jrg-security.jrg  jrg-security.md
examples/: README.jrg  index.jrg
examples/advanced/: index.jrg  signed-page.jrg  streaming-demo.jrg
examples/basic/: hello-world.jrg  index.jrg  typography.jrg
examples/full-site/: about.jrg  index.jrg
examples/full-site/pages/: blog.jrg  contact.jrg
examples/interactive/: guestbook.jrg  index.jrg  search-form.jrg  todo.jrg
examples/scripts/: bridge-demo.jrg  bridge-fetcher.wat  build-jrg-pages.sh  data-enrichment.jrg  dynamic-include.jrg  form-processor.jrg  scripted-page.jrg  transform-counter.wat
examples/scripts/data-enrichment/: Cargo.toml
examples/scripts/data-enrichment/src/: lib.rs
examples/scripts/dynamic-include/: Cargo.toml
examples/scripts/dynamic-include/src/: lib.rs
examples/scripts/form-processor/: Cargo.toml
examples/scripts/form-processor/src/: lib.rs
