[workspace]
members = [
    "crates/jaringan-browser",
    "crates/jaringan-core",
    "crates/jaringan-protocol",
    "crates/jaringan-render",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thesimonharms/jaringan"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
thiserror = "2.0"
url = "2.5"

jaringan-core = { path = "crates/jaringan-core" }
jaringan-protocol = { path = "crates/jaringan-protocol" }
jaringan-render = { path = "crates/jaringan-render" }
