[workspace]
members = [
    "crates/jaringan-browser",
    "crates/jaringan-core",
    "crates/jaringan-gateway",
    "crates/jaringan-protocol",
    "crates/jaringan-render",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thesimonharms/jaringan"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.2"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.38", features = ["full"] }
url = "2.5"

jaringan-core = { path = "crates/jaringan-core" }
jaringan-gateway = { path = "crates/jaringan-gateway" }
jaringan-protocol = { path = "crates/jaringan-protocol" }
jaringan-render = { path = "crates/jaringan-render" }
