[package]
name = "jaringan-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "0.28"
jaringan-core.workspace = true
jaringan-protocol.workspace = true
jaringan-render.workspace = true
ratatui.workspace = true
