[package]
name = "jaringan-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
crossterm = "0.28"
jaringan-core.workspace = true
jaringan-gateway.workspace = true
jaringan-plugins.workspace = true
jaringan-protocol.workspace = true
jaringan-render.workspace = true
jaringan-script.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
