[package]
name = "jaringan-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.23"
