[package]
name = "jaringan-script"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
wasmtime = "28"

[dev-dependencies]
wat = "1"

[lib]
